Refactored AppState.js  and restored jquery.usmap.js to its original structure. Minor bugs fixed(Scrollbar, height of popup screen and adjust drop down menu )

--- a/MHTCDashboard/src/main/webapp/css/local_style.css
+++ b/MHTCDashboard/src/main/webapp/css/local_style.css
@@ -1,7 +1,9 @@
 .modal-dialog
 {
   width: 60%;
+ 	
 }
+
 .trend_icon
 {
 display: block;
@@ -90,7 +92,7 @@ right:0;
 	padding:10px;
 }
 
-label.btn-default.statebutton.active
+label.statebutton.active
 {
 	background-color: #46AF31;
 	background-image: none;
@@ -98,11 +100,10 @@ label.btn-default.statebutton.active
 	
 }
 
-.statebutton
+.activestatelabel
 {
 	background-color: rgb(255,178,71);
 	background-image: none;
-	border-color: rgb(128, 128, 128);
 	color: dark-gray;
 	text-decoration: none;
 	text-shadow: none;
@@ -114,9 +115,35 @@ label.btn-default.statebutton.active
 	font-size: 14px;
 	font-weight: normal;
 	padding-top: 6px;
+	display: inline-block;
+}
+.multiselectbutton 
+{
+margin-bottom: 0;
+vertical-align: middle;
+cursor: pointer;
+border: 1px solid transparent;
+white-space: nowrap;
+padding: 6px 12px;
+line-height: 1.42857143;
+-webkit-user-select: none;
+	box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 1px rgba(0,0,0,.075);
+	background-repeat: repeat-x;
+	width:125px;
+	text-align:center;
+	border-radius: 4px;
+	border-color: rgb(43, 102, 154);
+	text-shadow: none;
+	text-decoration: none;
+	height:34px;
+	font-size: 14px;
+	font-weight: normal;
+	padding-top: 6px;
+	display: inline-block;
 }
 
-label.btn-default.statebutton
+
+label.statebutton
 {
 	background-color: #2d6ca2;
 	background-image: linear-gradient(to bottom,#428bca 0,#2d6ca2 100%);
@@ -151,7 +178,6 @@ background-position: 0px -240px;
 #sidebar,#multiSelecter,#legend
 {
 	border-color: #ABC;
-	
 	border-style: solid;
 	border-top-style: none;
 	border-left-style: none;
@@ -169,12 +195,12 @@ input[type="checkbox"]{
 table.table tbody tr td.tabbed_metric
 {
 	padding-left:30px;
+	
 }
 
 .tab-pane
 {
-	
-	overflow:auto;
 	height:70%;
+	overflow:auto;
 	
 }
